JumpScript/tests/baselines/reference/constDeclarations-ambient-errors.errors.txt
tests/cases/compiler/constDeclarations-ambient-errors.jump(2,27): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/compiler/constDeclarations-ambient-errors.jump(3,26): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/compiler/constDeclarations-ambient-errors.jump(4,20): error TS1254: A 'const' initializer in an ambient context must be a string or numeric literal.
tests/cases/compiler/constDeclarations-ambient-errors.jump(4,37): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/compiler/constDeclarations-ambient-errors.jump(4,51): error TS1039: Initializers are not allowed in ambient contexts.
tests/cases/compiler/constDeclarations-ambient-errors.jump(8,22): error TS1039: Initializers are not allowed in ambient contexts.


==== tests/cases/compiler/constDeclarations-ambient-errors.jump (6 errors) ====
    // error: no intialization expected in ambient declarations
    declare const c1: boolean = true;
                              ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    declare const c2: number = 0;
                             ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    declare const c3 = null, c4 :string = "", c5: any = 0;
                       ~~~~
!!! error TS1254: A 'const' initializer in an ambient context must be a string or numeric literal.
                                        ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
                                                      ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    
    declare module M {
        const c6 = 0;
        const c7: number = 7;
                         ~
!!! error TS1039: Initializers are not allowed in ambient contexts.
    }